比赛改为直播 蓋帽 = 阻攻 搶斷=抄截

--- a/SkyBetufi/SourceCode/SkySrc/SkyUI/MMBBMatch/MBViews/SkyBallHetiRedHTMatchPtsCompareCell.xib
+++ b/SkyBetufi/SourceCode/SkySrc/SkyUI/MMBBMatch/MBViews/SkyBallHetiRedHTMatchPtsCompareCell.xib
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -16,7 +14,7 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="320"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="319.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="320"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="球隊本場數據對比" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VL3-AT-kNe">
@@ -63,7 +61,7 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="蓋帽" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p8j-rl-z4B">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="阻攻" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p8j-rl-z4B">
                         <rect key="frame" x="172.5" y="145" width="30" height="35"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="35" id="lGP-rY-YBw"/>
@@ -117,7 +115,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="110" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yVz-N4-WvJ">
-                        <rect key="frame" x="26" y="40" width="96.5" height="35"/>
+                        <rect key="frame" x="25" y="40" width="97.5" height="35"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="35" id="8Gb-3N-Swo"/>
                         </constraints>
@@ -126,7 +124,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="71" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V2h-Cj-UGb">
-                        <rect key="frame" x="26" y="75" width="96.5" height="35"/>
+                        <rect key="frame" x="25" y="75" width="97.5" height="35"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="35" id="bg8-vw-aFg"/>
                         </constraints>
@@ -135,7 +133,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="28" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pkL-4G-6ZC">
-                        <rect key="frame" x="26" y="110" width="96.5" height="35"/>
+                        <rect key="frame" x="25" y="110" width="97.5" height="35"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="35" id="CCL-aD-50m"/>
                         </constraints>
@@ -144,7 +142,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K8R-Mo-9lj">
-                        <rect key="frame" x="26" y="145" width="96.5" height="35"/>
+                        <rect key="frame" x="25" y="145" width="97.5" height="35"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="35" id="Wjj-bD-qJO"/>
                         </constraints>
@@ -153,7 +151,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="7" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z6s-Ro-exD">
-                        <rect key="frame" x="26" y="180" width="96.5" height="35"/>
+                        <rect key="frame" x="25" y="180" width="97.5" height="35"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="35" id="C8a-88-U8c"/>
                         </constraints>
