--- a/SkyBetufi/SourceCode/SkySrc/SkyUI/MMBBMe/MBViews/SkyBallHetiRedHTLoginAlertView.xib
+++ b/SkyBetufi/SourceCode/SkySrc/SkyUI/MMBBMe/MBViews/SkyBallHetiRedHTLoginAlertView.xib
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -142,9 +140,12 @@
             <connections>
                 <outlet property="containerViewBottom" destination="AMQ-8o-PZp" id="0fU-8A-LuP"/>
                 <outlet property="containerViewHeight" destination="EQp-3F-dn2" id="PPI-Bk-HzN"/>
+                <outlet property="lineLoginBtn" destination="3TV-cX-KQT" id="SQH-7T-Keu"/>
+                <outlet property="lineLoginImageView" destination="sly-cX-68S" id="FXY-pk-9ls"/>
                 <outlet property="safeBackView" destination="B7I-Vt-lgu" id="ISx-1o-Qnk"/>
                 <outlet property="titleLabel" destination="Pjn-eL-jzR" id="XVr-Wx-Lom"/>
             </connections>
+            <point key="canvasLocation" x="139" y="80"/>
         </view>
     </objects>
     <resources>
